--- a/src/front/main.html
+++ b/src/front/main.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" type="image/x-icon" href="/src/front/img/logo.png">
+    <title>Qwerty</title>
 </head>
 <body>    
     <div id="general" class="general theme-light">
@@ -37,6 +38,8 @@
                             <image id="logout-icon" src="../img/exit_white.png"/>
                         </button>
                     </a>
+                    <span class="settingsSuccess hide" data-translate="success"></span>
+                    <span class="settingsError hide" data-translate="error"></span>
                 </div>
             </div>
         </header>
