--- a/src/front/regpage.html
+++ b/src/front/regpage.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <title>regorization Qwerty</title>
+    <link rel="shortcut icon" type="image/x-icon" href="/src/front/img/logo.png">
+    <title>Qwerty</title>
 </head>
 <body>
     <div class="container">
