--- a/src/front/main.html
+++ b/src/front/main.html
@@ -81,12 +81,12 @@
                         </label>
                         <div id="msgStatus" class="panel__status">
                             <img src="../img/spinner.svg" class="hideSpinner" id="spinner" alt="spinner">
-                            <span id="status"></span>
                         </div>
                         <div class="panel__control">
                             <button id="create" class="panel__control-create panel-control-style"><span data-translate="create">Create</span></button>
                             <span class="side-border"></span>
                             <button id="update" class="panel__control-update panel-control-style"><span data-translate="update">Update</span></button>
+                            <span id="status" class="panel__msstatus"></span>
                         </div>
                         
                     </div>
