--- a/src/front/main.html
+++ b/src/front/main.html
@@ -86,7 +86,10 @@
                             <button id="create" class="panel__control-create panel-control-style"><span data-translate="create">Create</span></button>
                             <span class="side-border"></span>
                             <button id="update" class="panel__control-update panel-control-style"><span data-translate="update">Update</span></button>
-                            <span id="status" class="panel__msstatus"></span>
+                            <span id="status1" class="panel__msstatus hide" data-translate="createCP"></span>
+                            <span id="status2" class="panel__msstatus hide" data-translate="updateCP"></span>
+                            <span id="status3" class="panel__msstatus hide" data-translate="deleteCP"></span>
+                            <span id="status4" class="panel__msstatus hide" data-translate="noCP"></span>
                         </div>
                         
                     </div>
