--- a/src/front/regpage.html
+++ b/src/front/regpage.html
@@ -43,7 +43,7 @@
                     <input type="password" id="regpass" class="reg__input" placeholder="Enter your password here">
                     <label for="confirmregpass" class="reg__label reg__label-mt35">Confirm password</label>
                     <input type="password" id="confirmregpass" class="reg__input" placeholder="Confirm password">
-                    <button class="reg__btn">SIGN IN</button>
+                    <button class="reg__btn">SIGN UP</button>
                     <a href="index.html" class="reg__link">Already have account?</a>
                 </div>
             </div>
