--- a/src/front/main.html
+++ b/src/front/main.html
@@ -105,13 +105,13 @@
                             <li><a class="table__nav-dms" id="dms">MySQL</a>
                               <ul class="table__dmsDropdown">
                                 <li><a class="table__nav-hover" id="MySQL">MySQL</a></li>
-                                <!-- <li><a class="table__nav-hover" id="PostgreSQL">PostgreSQL</a></li>
+                                <li><a class="table__nav-hover" id="PostgreSQL">PostgreSQL</a></li>
                                 <li><a class="table__nav-hover" id="SQLite">SQLite</a></li>
                                 <li><a class="table__nav-hover" id="MongoDB">MongoDB</a>
                                 <li><a class="table__nav-hover" id="Redis">Redis</a></li>
-                                <li><a class="table__nav-hover" id="Cassandra">Cassandra</a></li>
-                                <li><a class="table__nav-hover" id="Neo4j">Neo4j</a></li> -->
-                              </ul>
+                                <!-- <li><a class="table__nav-hover" id="Cassandra">Cassandra</a></li>
+                                <li><a class="table__nav-hover" id="Neo4j">Neo4j</a></li>
+                              </ul> -->
                             </li>
                             <li><a id="sort" class="table__nav-sort" data-translate="firstName"></a><span data-translate="sortLabel" class="table__nav-srt sortLabel"></span>
                               <ul class="table__sortDropdown">
