--- a/src/front/regpage.html
+++ b/src/front/regpage.html
@@ -39,8 +39,10 @@
                 <div class="reg__reg">
                     <label for="reglogin" class="reg__label">login</label>
                     <input type="text" id="reglogin" class="reg__input" placeholder="Enter your login here">
+                    <div class="reg__valid">Only latin letters, numbers, min 5 and max 20 characters</div>
                     <label for="regpass" class="reg__label reg__label-mt35">PASSWORD</label>
                     <input type="password" id="regpass" class="reg__input" placeholder="Enter your password here">
+                    <div class="reg__valid">Only latin letters, numbers, min 5 and max 20 characters</div>
                     <label for="confirmregpass" class="reg__label reg__label-mt35">Confirm password</label>
                     <input type="password" id="confirmregpass" class="reg__input" placeholder="Confirm password">
                     <button class="reg__btn">SIGN UP</button>
