phone and company validation update

--- a/src/front/main.html
+++ b/src/front/main.html
@@ -73,6 +73,7 @@
                         <label for="companynameInput" class="panel__label">
                             <span data-translate="company">Company name</span>
                             <input type="text" name="company" id="companynameInput" class="panel__inputs-company panel__input" data-placeholder="company" placeholder="Company name" maxlength="21">
+                            <span class="input-error-company hide" data-translate="companyError"></span>
                         </label>
                         <label for="ageInput" class="panel__label">
                             <span data-translate="age">Age</span>
