--- a/src/front/main.html
+++ b/src/front/main.html
@@ -67,7 +67,7 @@
                         </label>
                         <label for="phonenumberInput" class="panel__label">
                             <span data-translate="phone">Phone number</span>
-                            <input type="tel" name="phone" id="phonenumberInput" class="panel__inputs-phone panel__input"  pattern="([0-9]{3})-[0-9]{3}-[0-9]{4}" minlength="14" maxlength="14" data-placeholder="phone" placeholder="Phone number">
+                            <input type="tel" name="phone" id="phonenumberInput" class="panel__inputs-phone panel__input" title="(xxx)-xxx-xxxx" pattern="([0-9]{3})-[0-9]{3}-[0-9]{4}" minlength="14" maxlength="14" data-placeholder="phone" placeholder="Phone number">
                             <span class="input-error-phone hide">(xxx)-xxx-xxxx</span>
                         </label>
                         <label for="companynameInput" class="panel__label">
